--- a/styles/style.css
+++ b/styles/style.css
@@ -245,8 +245,12 @@
 
 .table__cell_theme_dark {
   width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
   z-index: 1;
 }
+
 
 .footer {
   min-height: 350px;
