--- a/styles/style.css
+++ b/styles/style.css
@@ -149,11 +149,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width: 1100px;
+  padding: 0;
+  list-style-type: none;
 }
 
 .table__cell {
   margin-top: 60px;
   width: 250px;
+
 }
 
 .table__heading {
