--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -5,6 +5,7 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
-  margin: 0 0 0 64px;
   z-index: 2;
+  margin: 0 0 0 64px;
+  padding: 0;
 }
