--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,7 +1,8 @@
 .section-subtitle {
   line-height: 34px;
   font-size: 24px;
-  margin: 0;
   width: 60%;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
