--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -5,7 +5,7 @@
   background-position: left bottom;
   background-size: 867px 637px;
   width: 100%;
-  height: 890px;
+  min-height: 890px;
   padding-top: 100px;
   position: relative;
   box-sizing: border-box;
