--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,5 +1,9 @@
 .video__iframes {
-  margin-top: 50px;
+  margin: 50px 0 0 0;
   display: flex;
   gap: 20px;
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
 }
+
