--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -3,5 +3,6 @@
   flex-direction: column;
   align-items: center;
   padding-top: 100px;
-  margin: 0 auto -50px auto;
+  margin: 0 auto;
+  transform: translateY(50px);
 }
